# juicebox-hsm-realm

./: .force_build  .gitignore  .gitmodules  Cargo.toml  README.md  RUN.md  build-and-upload-entrust.sh  build-and-upload.sh  build-ppc.sh  secrets-demo.json  test-ppc.sh
.cargo/: config.toml
.github/workflows/: audit.yaml  main.yaml
agent_api/: Cargo.toml
agent_api/src/: lib.rs  merkle.rs
agent_core/: Cargo.toml
agent_core/src/: append.rs  commit.rs  hsm.rs  lib.rs  merkle.rs  peers.rs  rate.rs  service.rs  tenants.rs  transfer.rs
async_util/: Cargo.toml
async_util/src/: lib.rs
benches/: voprf_benchmark.rs
bigtable/: Cargo.toml
bigtable/src/: lib.rs  mutate.rs  read.rs
bitvec/: Cargo.toml
bitvec/src/: lib.rs
build_info/: Cargo.toml  build_script.rs
build_info/src/: lib.rs
cache/: Cargo.toml
cache/src/: lib.rs
ceremony/tool/: Cargo.toml  usage.md
chaos_puppy/: Cargo.toml
chaos_puppy/src/: actions.rs  main.rs
chaos_puppy/src/actions/: leadership.rs  ownership.rs
cluster-cli/: Cargo.toml  usage.md
cluster-cli/src/: commands.rs  main.rs  status.rs  statuses.rs  stepdown.rs  usage.txt
cluster-cli/src/commands/: agents.rs  assimilate.rs  auth_token.rs  configuration.rs  groups.rs  join_realm.rs  new_group.rs  new_realm.rs  stepdown.rs  transfer.rs
cluster_api/: Cargo.toml
cluster_api/src/: lib.rs
cluster_bench/: Cargo.toml
cluster_bench/src/: main.rs
cluster_cli/: Cargo.toml  demo.sh  usage.md
cluster_cli/src/: cluster.rs  commands.rs  main.rs  statuses.rs
cluster_cli/src/commands/: agents.rs  assimilate.rs  auth_token.rs  configuration.rs  groups.rs  join_realm.rs  new_group.rs  new_realm.rs  partitions.rs  rebalance.rs  stepdown.rs  table_stats.rs  tenants.rs  transfer.rs  transfer_range.rs  users.rs
cluster_core/: Cargo.toml
cluster_core/src/: assimilate.rs  leader.rs  lib.rs  realm.rs  transfer.rs  workload.rs
cluster_manager/: Cargo.toml
cluster_manager/src/: cluster_manager_usage.txt  main.rs  manager.rs
cluster_manager/src/manager/: leader.rs  rebalance.rs  stepdown.rs  transfer.rs  workload_debug.txt
codegen/: Cargo.toml
codegen/src/: main.rs
docs/merkle_tree/: merkle.typ  references.bib  template.typ  to_tree.py
docs/ownership_transfer/: ownership_transfer_0.2.3.mermaid  ownership_transfer_new.mermaid  readme.md
election/: Cargo.toml
election/src/: lib.rs
entrust-agent/: Cargo.toml  bindgen.sh  build.rs
entrust-agent/src/: main.rs  nfastapp.rs
entrust-hsm/: Cargo.toml  README.md  bindgen.sh  compile_linux.sh  compile_ncipher.sh
entrust-hsm/src/: lib.rs  main.c  ncipherxc.rs  platform.rs  seelib.rs
entrust_agent/: Cargo.toml  usage.txt
entrust_agent/src/: main.rs
entrust_api/: Cargo.toml
entrust_api/src/: lib.rs
entrust_hsm/: Cargo.toml  README.md  bindgen.sh  build.rs  compile_linux.sh  compile_ncipher.sh  e5500-entrust-ncipherxc-gnu.json
entrust_hsm/src/: lib.rs  ncipherxc.rs  platform.rs  seelib.rs
entrust_init/: Cargo.toml
entrust_init/src/: acl.rs  keys.rs  main.rs  nvram.rs  usage.txt  usage_acl.txt  usage_keys.txt  usage_nvram.txt
entrust_nfast/: Cargo.toml  bindgen.sh  build.rs
entrust_nfast/src/: bindgen.h  lib.rs  nfastapp.rs
entrust_ops/: Cargo.toml  README.md  usage.md
entrust_ops/src/: bip39.rs  commands.rs  digests.rs  errors.rs  lib.rs  main.rs  paths.rs  system.rs
entrust_ops/src/bip39/: bitwise.rs
entrust_ops/src/commands/: computer.rs  firmware.rs  hsm.rs  meta.rs  realm.rs  sign.rs  smartcard.rs  vendor.rs
entrust_ops/src/system/: files.rs  mounts.rs  process.rs
entrust_ops/tests/: dry_run.md  dry_run.rs  usage.rs
google/: Cargo.toml
google/src/: auth.rs  conn.rs  lib.rs
google/src/autogen/: google.api.rs  google.bigtable.admin.v2.rs  google.bigtable.v2.rs  google.cloud.secretmanager.v1.rs  google.r#type.rs  google.rpc.rs  mod.rs
google_pubsub/: Cargo.toml
google_pubsub/src/: lib.rs
hsm_api/: Cargo.toml
hsm_api/src/: lib.rs  merkle.rs  rpc.rs
hsm_core/: Cargo.toml
hsm_core/src/: hash.rs  hsm.rs  lib.rs  merkle.rs  mutation.rs
hsm_core/src/hsm/: app.rs  commit.rs  configuration.rs  mac.rs  mac.txt  tests.rs  transfer.rs
hsm_core/src/merkle/: agent.rs  delta.rs  dot.rs  dot_test.dot  insert.rs  merge.rs  overlay.rs  proof.rs  split.rs  testing.rs
hsmcore/: Cargo.toml
hsmcore/src/: bitvec.rs  hal.rs  hash.rs  hsm.rs  lib.rs  merkle.rs  mutation.rs  rand.rs  types.rs
hsmcore/src/hsm/: app.rs  cache.rs  commit.rs  configuration.rs  mac.rs  mac.txt  rpc.rs  types.rs
hsmcore/src/merkle/: agent.rs  base128.rs  dot.rs  insert.rs  merge.rs  overlay.rs  proof.rs  split.rs  test_types.rs  testing.rs
jburl/: Cargo.toml
jburl/src/: lib.rs
load-balancer/: Cargo.toml
load-balancer/src/: cert.rs  main.rs
load_balancer/: Cargo.toml
load_balancer/src/: cert.rs  load_balancer.rs  main.rs  server.rs  usage.txt
lru-cache/: Cargo.toml
lru-cache/src/: lib.rs
merkle_tree_docgen/: Cargo.toml  readme.md
merkle_tree_docgen/src/: main.rs  merge.rs  overlay.rs  split.rs
observability/: Cargo.toml
observability/src/: lib.rs  logging.rs  metrics.rs  retry_loop.rs  tracing.rs
pubsub_api/: Cargo.toml
pubsub_api/src/: lib.rs
reproducible_builds/: Dockerfile  build.sh  build_docker_image.sh  build_inner.sh  known_hosts  readme.md
retry_loop/: Cargo.toml
retry_loop/src/: errors.rs  lib.rs  logging.rs  tests.rs
scripts/: build-entrust-for-remote.sh  check-sdk-deps.py  coverage.sh  dep_graph.sh  entrust-sign.sh
secret_manager/: Cargo.toml
secret_manager/src/: google_secret_manager.rs  (+3 more)
service_checker/: Cargo.toml  usage.txt
service_core/: Cargo.toml
software_agent/: Cargo.toml  usage.txt
software_hsm/: Cargo.toml
software_hsm_client/: Cargo.toml
src/: bigtable_demo.rs  clap_parsers.rs  client.rs  client_auth.rs  future_task.rs  google_auth.rs  http_client.rs  lib.rs  logging.rs  main.rs  metrics.rs  process_group.rs  realm.rs  secret_manager.rs  server.rs  types.rs
store/: Cargo.toml
table/: Cargo.toml  borders.txt  justify.txt
testing/: Cargo.toml
tests/: bigtable.rs  leader.rs  loadbalancer.rs
(+155 files in other folders)
