[workspace]

members = [
    "agent_api",
    "agent_core",
    "bitvec",
    "cluster_api",
    "cluster_bench",
    "cluster_cli",
    "cluster_core",
    "cluster_manager",
    "codegen",
    "election",
    "entrust_agent",
    "entrust_api",
    "entrust_hsm",
    "entrust_init",
    "entrust_nfast",
    "google",
    "hsm_api",
    "hsm_core",
    "load_balancer",
    "lru-cache",
    "merkle_tree_docgen",
    "observability",
    "secret_manager",
    "service_core",
    "software_agent",
    "store",
    "table",
    "testing",
]

default-members = [
    "agent_api",
    "agent_core",
    "bitvec",
    "cluster_api",
    "cluster_bench",
    "cluster_cli",
    "cluster_core",
    "cluster_manager",
    "codegen",
    "election",
    "google",
    "hsm_api",
    "hsm_core",
    "load_balancer",
    "lru-cache",
    "observability",
    "secret_manager",
    "service_core",
    "software_agent",
    "store",
    "table",
    "testing",
]

# This allows the sdk packages to reference their workspace (for dependencies
# and such), rather than this one.
exclude = ["sdk"]
resolver = "2"

[workspace.package]
rust-version = "1.71"
version = "0.2.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
agent_api = { path = "agent_api" }
agent_core = { path = "agent_core" }
anyhow = "1.0.74"
async-trait = "0.1.73"
bitvec = { path = "bitvec" }
blake2 = { version = "0.10.6", default-features = false }
bytes = { version = "1.4.0", default-features = false }
cbor-diag = { version = "0.1.12" }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = [
    "alloc",
] }
ciborium = { version = "0.2.1", default-features = false }
ciborium-io = { version = "0.2.1", default-features = false }
clap = { version = "4.3.21", features = ["derive"] }
cluster_api = { path = "cluster_api" }
cluster_core = { path = "cluster_core" }
digest = "0.10.7"
dogstatsd = "0.9.0"
election = { path = "election" }
entrust_api = { path = "entrust_api" }
entrust_nfast = { path = "entrust_nfast" }
expect-test = "1.4.1"
futures = "0.3.28"
# gcp_auth is pinned because we have a local fork.
gcp_auth = { version = "=0.9.0", default-features = false, features = [
    "webpki-roots",
] }
google = { path = "google" }
hashbrown = { version = "0.14.0", default-features = false, features = [
    "inline-more",
    "serde",
] }
hdrhistogram = { version = "7.5.2", default-features = false }
hex = "0.4.3"
hkdf = "0.12.3"
hmac = "0.12.1"
hsm_api = { path = "hsm_api" }
hsm_core = { path = "hsm_core" }
http = "0.2.9"
http-body-util = "0.1.0-rc.3"
# hyper 1.0.0-rc.4 has a breaking change that requires a TokioIo adapter from
# hyper-util. hyper-util is currently unreleased, so stick with 1.0.0-rc.3 for
# now.
hyper = { version = "=1.0.0-rc.3", features = ["http1", "http2", "server"] }
itertools = { version = "0.11.0" }
juicebox_sdk = { path = "sdk/rust/sdk", features = ["reqwest", "tokio"] }
juicebox_marshalling = { path = "sdk/rust/marshalling" }
juicebox_networking = { path = "sdk/rust/networking", features = [
    "distributed-tracing",
    "reqwest",
] }
juicebox_noise = { path = "sdk/rust/noise" }
juicebox_oprf = { path = "sdk/rust/oprf" }
juicebox_process_group = { path = "sdk/rust/process_group" }
juicebox_realm_api = { path = "sdk/rust/realm/api" }
juicebox_realm_auth = { path = "sdk/rust/realm/auth" }
lru-cache = { path = "lru-cache" }
nix = { version = "0.26.2", default-features = false, features = ["signal"] }
observability = { path = "observability" }
once_cell = "1.18.0"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-http = "0.9.0"
opentelemetry-otlp = "0.13.0"
pin-project-lite = { version = "0.2.12" }
prost = "0.11.9"
prost-types = "0.11.9"
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
rand_core = "0.6.4"
reqwest = { version = "0.11.18", default-features = false, features = [
    "rustls-tls",
] }
rustls = "0.21.6"
rustls-pemfile = "1.0"
secret_manager = { path = "secret_manager" }
semver = "1.0.18"
serde = { version = "1.0.185", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = "1.0.105"
service_core = { path = "service_core" }
# Diego audited only the spin mutex in spin 0.9.8 (502c9dc) in Aug 2023.
spin = { version = "=0.9.8", default-features = false, features = [
    "mutex",
    "spin_mutex",
] }
store = { path = "store" }
subtle = { version = "2.5.0", default-features = false }
sysinfo = { version = "0.29" }
table = { path = "table" }
tempfile = "3.7.1"
testing = { path = "testing" }
thiserror = "1.0.46"
tokio = { version = "1.31.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
tokio-rustls = "0.24.1"
tonic = { version = "0.9.2", features = ["channel", "tls", "tls-webpki-roots"] }
tonic-build = "0.9.2"
tower-service = "0.3.2"
tracing = { version = "0.1.37", default-features = false, features = [
    "attributes",
] }
tracing-opentelemetry = "0.20.0"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
url = { version = "2.4.0", features = ["serde"] }
x25519-dalek = { version = "2.0", features = [
    "reusable_secrets",
    "serde",
    "static_secrets",
] }

[patch.crates-io]
gcp_auth = { git = "ssh://git@github.com/juicebox-systems/gcp_auth.git", rev = "edaccf4e99b7cdcec7646d67c4783e5fa2f46929" }
