[package]
name = "agent_api"
version = "0.2.0"
edition = "2021"
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
hsm_api = { workspace = true }
juicebox_networking = { workspace = true }
juicebox_realm_api = { workspace = true }
serde = { workspace = true }
observability = { path = "../observability" }
