[package]
name = "agent_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent_api = { path = "../agent_api" }
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
dogstatsd = { workspace = true }
futures = { workspace = true }
hdrhistogram = { workspace = true }
hsmcore = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
juicebox_hsm = { path = ".." }
juicebox-sdk-core = { workspace = true }
juicebox-sdk-marshalling = { workspace = true }
juicebox-sdk-networking = { workspace = true }
juicebox-sdk-process-group = { workspace = true }
observability = { path = "../observability" }
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
reqwest = { workspace = true }
store = { path = "../store" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
url = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
