[package]
name = "agent_core"
edition = "2021"
version = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent_api = { workspace = true }
anyhow = { workspace = true }
async_util = { workspace = true }
bitvec = { workspace = true }
build_info = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
cluster_api = { workspace = true }
cluster_core = { workspace = true }
election = { workspace = true }
futures = { workspace = true }
google = { workspace = true }
google_pubsub = { workspace = true }
hsm_api = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
juicebox_marshalling = { workspace = true }
juicebox_networking = { workspace = true }
juicebox_realm_api = { workspace = true }
observability = { workspace = true }
opentelemetry = { workspace = true }
pubsub_api = { workspace = true }
reqwest = { workspace = true }
retry_loop = { workspace = true }
serde_json = { workspace = true }
service_core = { workspace = true }
store = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
url = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
