[package]
name = "async_util"
edition = "2021"
version = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
