[package]
name = "chaos_puppy"
edition = "2021"
version = { workspace = true }
rust-version = { workspace = true }
build = "../build_info/build_script.rs"

[[bin]]
name = "chaos"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent_api = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
build_info = { workspace = true }
clap = { workspace = true }
cluster_api = { workspace = true }
cluster_core = { workspace = true }
google = { workspace = true }
hsm_api = { workspace = true }
jburl = { workspace = true }
juicebox_networking = { workspace = true }
juicebox_realm_api = { workspace = true }
observability = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
service_core = { workspace = true }
store = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
