[package]
name = "cluster_api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
hsmcore = { workspace = true }
juicebox-sdk = { workspace = true }
juicebox-sdk-networking = { workspace = true }
