[package]
name = "cluster_api"
version = "0.2.0"
edition = "2021"
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
hsm_api = { workspace = true }
juicebox_sdk = { workspace = true }
juicebox_networking = { workspace = true }
