[package]
name = "cluster_api"
edition = "2021"
version  = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
hsm_api = { workspace = true }
juicebox_sdk = { workspace = true }
juicebox_networking = { workspace = true }
thiserror = { workspace = true }
