[package]
name = "cluster_bench"
version = "0.2.0"
edition = "2021"
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dogstatsd = { workspace = true }
futures = { workspace = true }
hdrhistogram = { workspace = true }
google = { workspace = true }
juicebox_sdk = { workspace = true }
juicebox_networking = { workspace = true }
juicebox_realm_auth = { workspace = true }
observability = { workspace = true }
reqwest = { workspace = true }
secret_manager = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
