[package]
name = "cluster_bench"
edition = "2021"
version = { workspace = true }
rust-version = { workspace = true }
build = "../build_info/build_script.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async_util = { workspace = true }
build_info = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hdrhistogram = { workspace = true }
google = { workspace = true }
juicebox_sdk = { workspace = true }
juicebox_networking = { workspace = true }
juicebox_realm_auth = { workspace = true }
observability = { workspace = true }
reqwest = { workspace = true }
secret_manager = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
