[package]
name = "cluster_core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent_api = { workspace = true }
futures = { workspace = true }
hsm_api = { workspace = true }
juicebox_networking = { workspace = true }
juicebox_realm_api = { workspace = true }
serde = { workspace = true }
store = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
