[package]
name = "cluster_manager"
edition = "2021"
version = { workspace = true }
rust-version = { workspace = true }
build = "../build_info/build_script.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent_api = { workspace = true }
anyhow = { workspace = true }
build_info = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
cluster_api = { workspace = true }
cluster_core = { workspace = true }
futures = { workspace = true }
google = { workspace = true }
hsm_api = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
juicebox_networking = { workspace = true }
juicebox_realm_api = { workspace = true }
observability = { workspace = true }
opentelemetry = { workspace = true }
retry_loop = { workspace = true }
service_core = { workspace = true }
store = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
url = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
juicebox_process_group = { workspace = true }
once_cell = { workspace = true }
testing = { workspace = true }
